ESDK-2611 fixed compilation warnings for jdk1.9